fix: z-index problem

--- a/src/components/Modals/modal.css
+++ b/src/components/Modals/modal.css
@@ -8,6 +8,7 @@
   top: 0;
   left: 0;
   background-color: var(--black);
+  z-index: 100000;
 }
 
 .modal__main {
