--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -4,6 +4,7 @@
   height: 70px;
   position: fixed;
   top: 0;
+  z-index: 1000;
 }
 
 .nav__container {
